cabal-version:      2.4
name:               HSI
version:            0.1.0.0
synopsis:           Half-space intersection

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Roland Senn
maintainer:         rsx@bluewin.ch

-- A copyright notice.
-- copyright:
category:           Graphics
extra-source-files: CHANGELOG.md

library libdag
    exposed-modules:  Data.Graph.Dag

    -- Modules included in this library but not exported.
    other-modules:    Data.Graph.Dag.Dag,
                      Data.Graph.Dag.Node

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:  base ^>=4.16.1.0,
                    containers ^>=0.6.5.1,
                    enummapset,
                    transformers,
                    mtl ^>=2.2.2,
                    matrix,
                    vector

    hs-source-dirs:
    default-language: Haskell2010
    ghc-options:         -Wall


library libhsi
    exposed-modules:
        Data.Graph.HSI,
        Data.Graph.HSI.Test,
        Data.Graph.Display.Display,
        Data.Graph.Display.Html,
        Data.Graph.Display.Data,
        Data.Graph.Display.DispParams,
        Data.Graph.Display.Vect2,
        Data.Graph.HSI.Polytope,
        Data.Graph.HSI.InitCube,
        Data.Graph.HSI.Algorithm

    -- Modules included in this library but not exported.
    other-modules:
        Data.Graph.HSI.Halfspace,
        Data.Graph.HSI.Face,
        Data.Graph.HSI.RelPos,
        Data.Graph.HSI.Utils,
        Data.Graph.HSI.Visibility,
        Data.Graph.Dag,
        Data.Graph.Dag.Dag,
        Data.Graph.Dag.Node

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.1.0,
        containers ^>=0.6.5.1,
        enummapset,
        mtl ^>=2.2.2,
        matrix,
        vector,
        libdag,
        svg-builder,
        blaze-svg,
        blaze-html,
        open-browser,
        text,
        errors,
        exceptions
    hs-source-dirs:
    default-language: Haskell2010
    ghc-options:         -Wall

executable hsi
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        UI

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.1.0,
        containers ^>=0.6.5.1,
        enummapset,
        mtl ^>=2.2.2,
        matrix,
        vector,
        text,
        libdag,
        libhsi,
        directory,
        errors,
        exceptions,
        haskeline

    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:         -Wall

test-suite test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    Other-Modules:    Init,
                      DagSpec,
                      DagTriangle1,
                      DagTriangle2,
                      DagTriangle4
                      HalfspaceSpec,
                      InitSpec,
                      HSISpec
    build-depends:
        base ^>=4.16.1.0,
        containers ^>=0.6.5.1,
        mtl ^>=2.2.2,
        enummapset,
        matrix,
        vector,
        hspec,
        libhsi
